force-app/main/default/objects/DMP_Staging__c/DMP_Staging__c.object-meta.xml
<CustomObject>
    <label>DMP Staging</label>
    <nameField>
        <displayFormat>D-{0000000}</displayFormat>
        <label>DMP Staging Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DMP Staging</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>