force-app/main/default/objects/DMP_Staging__c/fields/Hem__c.field-meta.xml
<CustomField>
    <fullName>Hem__c</fullName>
    <description>Field that captures hashed email ID</description>
    <externalId>true</externalId>
    <label>Hem</label>
    <length>255</length>
    <type>Text</type>
</CustomField>