force-app/main/default/objects/DMP_Staging__c/fields/Record_Processed__c.field-meta.xml
<CustomField>
    <fullName>Record_Processed__c</fullName>
    <description>Field that captures date of record being processed</description>
    <defaultValue>false</defaultValue>
    <label>Record Processed</label>
    <type>Checkbox</type>
</CustomField>