force-app/main/default/objects/DMP_Staging__c/fields/Record_Processed_Date__c.field-meta.xml
<CustomField>
    <fullName>Record_Processed_Date__c</fullName>
    <description>Field that captures date of record being processed</description>
    <label>Record Processed Date</label>
    <type>DateTime</type>
</CustomField>