force-app/main/default/objects/DMP_Staging__c/fields/segments__c.field-meta.xml
<CustomField>
    <fullName>segments__c</fullName>
    <description>Field that captures value of DMP segment</description>
    <label>segments</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>